Change Breakdown: Code Changes: 	block comments explaining behavior Added to the following files : App.js, Footer.js, Header.js, LoginPage.js, SignUpPage.js 	*back-end developer suggestion to eventually extend App.js added to the top comment of the App.js file* UI Changes: 	Footer.js: added Account Sign up to the list of Links 	Header.js: text within Div now has its own css reference that correctly aligns text within the banner 	LoginPage: added Link "Don't Have An Account?" to adhere to Mock-up layout. Link takes user to the Sign-up page for account creation 			    container for the log-in elements now has its own css reference ("login-container") 			    breaks added to help spacing out elements eg. between input fields and buttons 			    finally the remember me check box has been moved to below the sign-in button 	SignUpPage.js: large overhaul to more consistently adhere to the mock-up reference
	Styles.css: "#container" refactored to two variants "#login-container" & "#signup-container" each now sized and tailored to suite the elements the contain
			   "#mainHeader" now adjusted to work better with the custom header-text ("banner-text") instead of using default given h3 that
				was previously used in the header.js

--- a/cas-project/src/styles/styles.css
+++ b/cas-project/src/styles/styles.css
@@ -22,11 +22,11 @@
     font-size: large;
 }
 
-#container {
+#login-container {
     position: relative;
     margin-top: 120px;
     width: 340px;
-    height: 352px;
+    height: 360px;
     top: 50%;
     left: 50%;
 
@@ -37,7 +37,20 @@
     box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
 }
 
+#signup-container {
+    position: relative;
+    margin-top: 120px;
+    width: 340px;
+    height: 360px;
+    top: 50%;
+    left: 50%;
 
+    margin-left: -170px;
+    background: #fff;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
+}
 #top-div-Container {
     background-color: #c2011b;
     width: 100%;
@@ -48,7 +61,7 @@
 p a {
     font-size: 11px;
     color: #aaa;
-
+    padding-left: 15px;
     left: 50%;
     margin-top: -13px;
 
@@ -90,8 +103,15 @@ body {
 }
 #mainHeader {
     background-color: #c2011b;
+    height: 50px;
     color: aliceblue;
-    margin-top: -20px;
+    padding:0;
+    margin-top: -10px;
+}
+banner-text {
+    font-size : 25px;
+    top: 10px;
+    position: relative;
 }
 /* This is the CSS that aligns
    the footer to the bottom of
